# UjianPrak.PW

./: bun.lockb  next.config.ts  package-lock.json  package.json  tsconfig.json
generative_ai/: README.md  make_database.py  pyproject.toml
generative_ai/app/: config.py  server.py
public/: manifest.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/(page)/chatbot/: page.tsx
src/app/(page)/contact/: page.tsx
src/app/(page)/invoice/: page.tsx
src/app/(page)/keranjang/: page.tsx
src/app/(page)/payment/: page.tsx
src/app/(page)/profile/: layout.tsx  page.tsx
src/app/(page)/search_list/: page.tsx
src/app/api/auth/: google.ts  login.ts  register.ts
src/app/api/cart/: add_cart.ts  cart.ts  remove_cart.ts  update_cart.ts
src/app/api/invoice/: invoice.ts
src/app/api/product/: best_saller.ts  delete_product.ts  detail_product.ts  latest_product.ts  list_product.ts  update_product.ts  upload_product.ts
src/app/api/profile/: profile.ts  update-picture.ts  update-profile.ts
src/app/api/search_list/: product.ts
src/app/api/transaksi/: detail-transaksi.ts  konfirmasi_transaksi.tsx  log_transaksi.ts  transaksi.ts
src/app/api/upload/: route.ts
src/app/api/upload-product/: route.ts
src/app/assets/css/: detail_produk.css  home.css  skeleton-loading.css
src/app/auth/sign-in/: page.tsx
src/app/auth/sign-up/: page.tsx
src/app/context/: ProfileContext.tsx
src/app/lib/: axios.ts  constant.ts  firebase.ts  format_money.ts
src/app/lib/model/: cart.ts  cartItem.ts  category.ts  ekspedisi.ts  form.ts  (+7 more)
src/components/ui/: button.tsx  dialog.tsx
(+49 files in other folders)
